--- a/Main-task/index.html
+++ b/Main-task/index.html
@@ -1,100 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tringapps</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="index.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="bg-dark">
-      <div class="row">
-        <div class="col col-6 ">
-          <div class="h1 text-white ps-5 py-3" style="font-family: sans-serif;">tringapps</div>
-          <div class="container">
-            <div class="btns d-flex justify-content-center">
-                <div class="btn btn1 bg-warning">Sign-In</div>
-                <div class="btn btn2 text-white">Sign-Up</div>
-            </div>
-            <!-- <form action="" class="p-5" id="Sign-In">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tringapps</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="index.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="bg-dark">
+    <div class="row">
+      <div class="col col-6 left-panel">
+        <div class="logo" ><img src="logo.png" style="height: 45px !important;"></div>
+        <div class="container">
+          <div class="btns d-flex justify-content-center">
+            <div class="btn btn1 text-secondary active" onclick="showForm('signInForm')">Sign-In</div>
+            <div class="btn btn2 text-secondary" onclick="showForm('signUpForm')">Sign-Up</div>
+        </div>
+          <div id="signInForm" class="form-container active">
+            <form action="" class="p-5">
               <div class="form-group container">
-                <fieldset >
+                <fieldset>
                   <label class="form-label text-white" for="name">Name</label>
-                  <input  type="text" class="form-control bg-dark" id="name" placeholder="Enter Email" required/>
+                  <input type="text" class="form-control bg-dark" id="name" placeholder="Enter Name" required />
+                  <div class="name-err">water</div>
                 </fieldset>
                 <fieldset class="mt-3">
                   <label class="form-label text-white" for="password">Password</label>
-                  <input type="password" class="form-control bg-dark" id="password" placeholder="Enter Password" required/>
+                  <input type="password" class="form-control bg-dark" id="password" placeholder="Enter Password"
+                    required />
+                    <div class="pass-err"></div>
                 </fieldset>
                 <fieldset class="d-flex justify-content-between mt-3">
-                    <div>
-                        <input type="checkbox" class="h5" id="checkbox"></input>
-                        <label for="checkbox" class="text-white">Remember me</label>
-                    </div>
-                    <a href="#" class="justify-content-end">forget password?</a>
+                  <div>
+                    <input type="checkbox" class="h5" id="checkbox"></input>
+                    <label for="checkbox" class="text-white" style="font-family: 'Open Sans', sans-serif">Remember me</label>
+                  </div>
+                  <a href="#" class="justify-content-end forget-password">Forget Password?</a>
                 </fieldset>
-                <div class="btn btn-warning col-12 mt-5 mb-3 ">Submit</div>
+                <p id="signInError" class="text-danger text-center"></p>
+                <button type="button" class="btn btn-warning col-12 mt-5 mb-3 sign" onclick="signIn()">Submit</button>
                 <div class="or text-white">OR</div>
-                <div class="btn btn-white bg-white col-12 mt-3">Sign up with Google <img src="ic_google.png" alt=""></div>
-                <div class="Sign-Up text-warning d-flex justify-content-center mt-4">Don't have account?Sign-up</div>
-              </div>
-            </form> -->
-            <form action="" class="p-5" id="Sign-Up">
-                <div class="form-group container">
-                  <fieldset >
-                    <label class="form-label text-white" for="name">Name</label>
-                    <input  type="text" class="form-control bg-dark" id="name" placeholder="Enter Email" required/>
-                  </fieldset>
-                  <fieldset class="mt-3">
-                    <label class="form-label text-white" for="Email">Email</label>
-                    <input type="password" class="form-control bg-dark" id="password" placeholder="Enter Password" required/>
-                  </fieldset>
-                  <fieldset class="mt-3">
-                    <label for="language-select" class="text-white mb-2 ">Language</label>
-                    <select class="language bg-dark text-white" id="language-select">
-                        <option>English</option>
-                        <option>Tamil</option>
-                        <option>Telungu</option>
-                        <option>Malayalam</option>
-                    </select>
-                  </fieldset>
-                  <fieldset>
-                    <label class="form-label text-white" for="password">Password</label>
-                    <input type="password" class="form-control bg-dark" id="password" placeholder="Enter Password" required/>
-                  </fieldset>
-                  <fieldset class="d-flex justify-content-between mt-3">
-                      <div>
-                          <input type="checkbox" class="h5" id="checkbox"></input>
-                          <label for="checkbox" class="text-white">Remember me</label>
-                      </div>
-                      <a href="#" class="justify-content-end">forget password?</a>
-                  </fieldset>
-                  <div class="btn btn-warning col-12 mt-5 mb-3 ">Submit</div>
-                  <div class="or text-white">OR</div>
-                  <div class="btn btn-white bg-white col-12 mt-3">Sign up with Google <img src="ic_google.png" alt=""></div>
-                  <div class="Sign-Up text-warning d-flex justify-content-center mt-4">Don't have account?Sign-up</div>
+                <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center" style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
                 </div>
-              </form>
+                <div class="Sign-Up text-white d-flex justify-content-center mt-4">Don't have account? <a class="text-warning px-1" onclick="showForm('signUpForm')" style="text-decoration: none;"> Sign-up</a></div>
+              </div>
+            </form>
+          </div>
+          <div id="signUpForm" class="form-container">
+            <form action="" class="p-5">
+              <div class="form-group container">
+                <fieldset>
+                  <label class="form-label text-white" for="name">Name</label>
+                  <input type="text" class="form-control bg-dark" id="new-name" placeholder="Enter Name" required />
+                </fieldset>
+                <fieldset class="mt-3">
+                  <label class="form-label text-white" for="Email">Email</label>
+                  <input type="password" class="form-control bg-dark" id="new-email" placeholder="Enter Email"
+                    required />
+                    <p id="signUpError" class="text-danger text-center"></p>
+                </fieldset>
+                <fieldset class="mt-3">
+                  <label for="language-select" class="text-white mb-2 ">Language</label>
+                  <select class="language bg-dark text-white" id="language-select">
+                    <option>--Select-option--</option>
+                    <option>English</option>
+                    <option>Tamil</option>
+                    <option>Telungu</option>
+                    <option>Malayalam</option>
+                  </select>
+                  <label for="language-select" class="text-white mb-2 ">Language</label>
+                  <div class="row">
+                    <div class="col col-3 m-0">
+                      <select class="number bg-dark text-white" id="language-select">
+                        <option>+91</option>
+                        <option>+1</option>
+                        <option>+100</option>
+                        <option>+38</option>
+                        <option>+67</option>
+                      </select>
+                    </div>
+                    <div class="col col-9 div-number">
+                      <input type="number" class="form-control bg-dark col-10" id="number" placeholder="Phone Number"
+                        required />
+                    </div>
+                  </div>
+                </fieldset>
+                <fieldset>
+                  <label class="form-label text-white" for="password">Password</label>
+                  <input type="password" class="form-control bg-dark" id="new-password" placeholder="Enter Password"
+                    required />
+                    <p id="passErr"></p>
+                </fieldset>
+                <fieldset class=" mt-3">
+                  <div>
+                    <input type="checkbox" class="box" id="checkbox1"></input>
+                    <label for="checkbox1" class="text-white">Remember me</label>
+                  </div>
+                  <div>
+                    <input type="checkbox" class="box" id="checkbox2"></input>
+                    <label for="checkbox2" class="text-white">I agree to terms and conditions</label>
+                  </div>
+                  <div>
+                    <input type="checkbox" class="box" id="checkbox3" ></input>
+                    <label for="checkbox3" class="text-white">I'm over 18</label>
+                  </div>
+                </fieldset>
+                <p id="signupErr"></p>
+                <button type="button" class="btn btn-warning col-12 mt-5 mb-3 sign" onclick="signUp()">Submit</button>
+                <div class="or text-white">OR</div>
+                <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center" style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
+                </div>
+                <div class="Sign-Up text-warning d-flex justify-content-center mt-4"><p class="text-white px-1">Already have account?</p> <a onclick="showForm('signInForm')">Sign-In</a></div>
+              </div>
+            </form>
           </div>
         </div>
-        <div class="col col-6 p-0">
-          <img
-            src="https://s3-alpha-sig.figma.com/img/604e/1b5c/7d3c27a774af4e69a6b43fde874c130d?Expires=1739750400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ROFbOXQrGEygKeIWT077YAUhtyPJ~HBQFbDf4KAM1tJv6YSeMzJxNxChFBU~49tPVvxNMWruY169MNRJPWBtcHMG1rRxHRJFk5SKccg0-~GHDcW4L959tdJNgXUqYwKRik0JN4h4qcSk6Yqksladu2ns8r4ViJFm2qELOS44bYN-rpE-zN49B6IgYyrvt5rzqeuzwH8Trqoe46vqMsDqCkjfKdP0g7bHdZUKtkOTQnBKHHjyqdTFV3kwnBPAI-PA3EgasW97XuBpeAueFVDd6ghxnrB7n~BU5N-bXQN23dNDxh0EDyokFJc9L3nsiBoMT5gnPcdIE4s3Id-uHkpMOQ__"
-          />
-        </div>
+      </div>
+      <div class="col col-6 p-0 right-panel" style="padding: 0px !important;margin: 0px !important;height: 100vh;">
+        <img
+          src="signin.png"
+          id="image"
+          alt="side-image"/>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
