--- a/Main-task/home.html
+++ b/Main-task/home.html
@@ -278,7 +278,9 @@
             <h1 style="text-align: center;color: black;">OUR VALUED CLIENT</h1>
         </div>
         <div>
-            <img src="Frame_1.png" alt="not_displayed" style="margin-top: 20px;">
+            <marquee width="100%" direction="right" >
+                <img src="Frame_1.png" alt="not_displayed" style="margin-top: 20px;">
+                </marquee>
         </div>
     </section>
 
