--- a/Main-task/index.html
+++ b/Main-task/index.html
@@ -19,8 +19,8 @@
   <div class="bg-dark">
     <div class="row">
       <div class="col col-6 left-panel">
-        <div class="logo" ><img src="logo.png" style="height: 45px !important;"></div>
-        <div class="container">
+        <div class="logo" ><img src="logo.png"></div>
+        <div class="container mt-5">
           <div class="btns d-flex justify-content-center">
             <div class="btn btn1 text-secondary active" onclick="showForm('signInForm')">Sign-In</div>
             <div class="btn btn2 text-secondary" onclick="showForm('signUpForm')">Sign-Up</div>
@@ -47,7 +47,7 @@
                   <a href="#" class="justify-content-end forget-password">Forget Password?</a>
                 </fieldset>
                 <p id="signInError" class="text-danger text-center"></p>
-                <button type="button" class="btn btn-warning col-12 mt-5 mb-3 sign" onclick="signIn()">Submit</button>
+                <button type="button" class="btn col-12 mt-5 mb-3 sign" onclick="signIn()">Submit</button>
                 <div class="or text-white">OR</div>
                 <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center" style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
                 </div>
@@ -110,16 +110,16 @@
                     <label for="checkbox2" class="text-white">I agree to terms and conditions</label>
                   </div>
                   <div>
-                    <input type="checkbox" class="box" id="checkbox3" ></input>
+                    <input type="radio" class="box" id="checkbox3" ></input>
                     <label for="checkbox3" class="text-white">I'm over 18</label>
                   </div>
                 </fieldset>
-                <p id="signupErr"></p>
-                <button type="button" class="btn btn-warning col-12 mt-5 mb-3 sign" onclick="signUp()">Submit</button>
+                <p id="signupErr" style="margin: 0px; padding: 0px;"></p>
+                <button type="button" class="btn col-12 mt-5 mb-3 sign" onclick="signUp()">Submit</button>
                 <div class="or text-white">OR</div>
                 <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center" style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
                 </div>
-                <div class="Sign-Up text-warning d-flex justify-content-center mt-4"><p class="text-white px-1">Already have account?</p> <a onclick="showForm('signInForm')">Sign-In</a></div>
+                <div class="Sign-Up text-warning d-flex justify-content-center mt-4"><p class="text-white px-1"> Have an account?</p> <a onclick="showForm('signInForm')">Sign-In</a></div>
               </div>
             </form>
           </div>
