--- a/Main-task/index.html
+++ b/Main-task/index.html
@@ -19,12 +19,12 @@
   <div class="bg-dark">
     <div class="row">
       <div class="col col-6 left-panel">
-        <div class="logo" ><img src="logo.png"></div>
+        <div class="logo"><img src="logo.png"></div>
         <div class="container mt-5">
           <div class="btns d-flex justify-content-center">
             <div class="btn btn1 text-secondary active" onclick="showForm('signInForm')">Sign-In</div>
             <div class="btn btn2 text-secondary" onclick="showForm('signUpForm')">Sign-Up</div>
-        </div>
+          </div>
           <div id="signInForm" class="form-container active">
             <form action="" class="p-5">
               <div class="form-group container">
@@ -37,21 +37,25 @@
                   <label class="form-label text-white" for="password">Password</label>
                   <input type="password" class="form-control bg-dark" id="password" placeholder="Enter Password"
                     required />
-                    <div class="pass-err"></div>
+                  <div class="pass-err"></div>
                 </fieldset>
                 <fieldset class="d-flex justify-content-between mt-3">
                   <div>
                     <input type="checkbox" class="h5" id="checkbox"></input>
-                    <label for="checkbox" class="text-white" style="font-family: 'Open Sans', sans-serif">Remember me</label>
+                    <label for="checkbox" class="text-white" style="font-family: 'Open Sans', sans-serif">Remember
+                      me</label>
                   </div>
                   <a href="#" class="justify-content-end forget-password">Forget Password?</a>
                 </fieldset>
-                <p id="signInError" class="text-danger text-center"></p>
-                <button type="button" class="btn col-12 mt-5 mb-3 sign" onclick="signIn()">Submit</button>
+                <p id="signInError" class="text-danger mt-5"></p>
+                <button type="submit" class="btn col-12  mb-3 sign" onclick="signIn()">Submit</button>
                 <div class="or text-white">OR</div>
-                <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center" style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
+                <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center"
+                  style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
                 </div>
-                <div class="Sign-Up text-white d-flex justify-content-center mt-4">Don't have account? <a class="text-warning px-1" onclick="showForm('signUpForm')" style="text-decoration: none;"> Sign-up</a></div>
+                <div class="Sign-Up text-white d-flex justify-content-center mt-4">Don't have account? <a
+                    class="text-warning px-1" onclick="showForm('signUpForm')" style="text-decoration: none;">
+                    Sign-up</a></div>
               </div>
             </form>
           </div>
@@ -66,22 +70,22 @@
                   <label class="form-label text-white" for="Email">Email</label>
                   <input type="password" class="form-control bg-dark" id="new-email" placeholder="Enter Email"
                     required />
-                    <p id="signUpError" class="text-danger text-center"></p>
+                  <p id="signUpError" class="text-danger text-center"></p>
                 </fieldset>
-                <fieldset class="mt-3">
+                <fieldset class="">
                   <label for="language-select" class="text-white mb-2 ">Language</label>
-                  <select class="language bg-dark text-white" id="language-select">
-                    <option>--Select-option--</option>
+                  <select class="language bg-dark" id="language-select">
+                    <option value="" disabled selected>Choose an option</option>
                     <option>English</option>
                     <option>Tamil</option>
                     <option>Telungu</option>
                     <option>Malayalam</option>
                   </select>
-                  <label for="language-select" class="text-white mb-2 ">Language</label>
+                  <label for="language-select" class="text-white mb-2 mt-4">Phone Number</label>
                   <div class="row">
-                    <div class="col col-3 m-0">
+                    <div class="col col-3 ">
                       <select class="number bg-dark text-white" id="language-select">
-                        <option>+91</option>
+                        <option><img src="Flags.png" alt="no img" width: 22.px; height: 16px;>+91</option>
                         <option>+1</option>
                         <option>+100</option>
                         <option>+38</option>
@@ -89,47 +93,49 @@
                       </select>
                     </div>
                     <div class="col col-9 div-number">
-                      <input type="number" class="form-control bg-dark col-10" id="number" placeholder="Phone Number"
-                        required />
+                      <input type="text" class="form-control bg-dark col-10" id="number" maxlength="10"
+                        pattern="[1-9]{1}[0-9]{9}" placeholder="Phone Number" required />
                     </div>
                   </div>
                 </fieldset>
-                <fieldset>
+                <fieldset class="mt-3">
                   <label class="form-label text-white" for="password">Password</label>
                   <input type="password" class="form-control bg-dark" id="new-password" placeholder="Enter Password"
                     required />
-                    <p id="passErr"></p>
+                  <p id="passErr"></p>
                 </fieldset>
                 <fieldset class=" mt-3">
                   <div>
-                    <input type="checkbox" class="box" id="checkbox1"></input>
+                    <input type="checkbox" class="box" id="checkbox1" required></input>
                     <label for="checkbox1" class="text-white">Remember me</label>
                   </div>
                   <div>
-                    <input type="checkbox" class="box" id="checkbox2"></input>
-                    <label for="checkbox2" class="text-white">I agree to terms and conditions</label>
+                    <input type="checkbox" class="box" id="checkbox2" required></input>
+                    <label for="checkbox2" class="text-white">I agree to <a class="text-warning px-1" href="https://tringapps.com/terms-and-conditions/"
+                        style="text-decoration: none;">terms</a> and
+                      <a class="text-warning px-1" href="https://tringapps.com/terms-and-conditions/" style="text-decoration: none;">conditions</a></label>
                   </div>
                   <div>
-                    <input type="radio" class="box" id="checkbox3" ></input>
-                    <label for="checkbox3" class="text-white">I'm over 18</label>
+                    <input type="radio" class="box" id="checkbox3" required></input>
+                    <label for="checkbox3" class="text-white">I'm over 18+</label>
                   </div>
                 </fieldset>
                 <p id="signupErr" style="margin: 0px; padding: 0px;"></p>
-                <button type="button" class="btn col-12 mt-5 mb-3 sign" onclick="signUp()">Submit</button>
+                <button type="submit" class="btn col-12 mt-5 mb-3 sign" onclick="signUp()">Submit</button>
                 <div class="or text-white">OR</div>
-                <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center" style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
+                <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center"
+                  style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
                 </div>
-                <div class="Sign-Up text-warning d-flex justify-content-center mt-4"><p class="text-white px-1"> Have an account?</p> <a onclick="showForm('signInForm')">Sign-In</a></div>
+                <div class="Sign-Up text-warning d-flex justify-content-center mt-4">
+                  <p class="text-white px-1"> Have an account?</p> <a onclick="showForm('signInForm')">Sign-In</a>
+                </div>
               </div>
             </form>
           </div>
         </div>
       </div>
       <div class="col col-6 p-0 right-panel" style="padding: 0px !important;margin: 0px !important;height: 100vh;">
-        <img
-          src="signin.png"
-          id="image"
-          alt="side-image"/>
+        <img src="signin.png" id="image" alt="side-image" />
       </div>
     </div>
   </div>
