corrections in signin sign up page

--- a/Main-task/home.html
+++ b/Main-task/home.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="home">
-        <nav>
+        <nav class="sticky">
             <div class="logo"><img src="logo.png" style="height: 45px; width: 180;"></div>
             <ul class="home_page">
                 <li><a href="#">Services</a></li>
