--- a/Main-task/index.html
+++ b/Main-task/index.html
@@ -48,7 +48,7 @@
                   <a href="#" class="justify-content-end forget-password">Forget Password?</a>
                 </fieldset>
                 <p id="signInError" class="text-danger mt-5"></p>
-                <button type="submit" class="btn col-12  mb-3 sign" onclick="signIn()">Submit</button>
+                <button type="button" class="btn col-12  mb-3 sign" onclick="signIn()" >Submit</button>
                 <div class="or text-white">OR</div>
                 <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center"
                   style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
@@ -68,14 +68,14 @@
                 </fieldset>
                 <fieldset class="mt-3">
                   <label class="form-label text-white" for="Email">Email</label>
-                  <input type="password" class="form-control bg-dark" id="new-email" placeholder="Enter Email"
+                  <input type="email" class="form-control bg-dark" id="new-email" placeholder="Enter Email"
                     required />
                   <p id="signUpError" class="text-danger text-center"></p>
                 </fieldset>
                 <fieldset class="">
                   <label for="language-select" class="text-white mb-2 ">Language</label>
-                  <select class="language bg-dark" id="language-select">
-                    <option value="" disabled selected>Choose an option</option>
+                  <select class="language bg-dark text-white opacity-25" id="language-select" style="color: #ffffff80;">
+                    <option class="" selected style="color: #ffffff80 !important">Choose an option</option>
                     <option>English</option>
                     <option>Tamil</option>
                     <option>Telungu</option>
@@ -84,8 +84,8 @@
                   <label for="language-select" class="text-white mb-2 mt-4">Phone Number</label>
                   <div class="row">
                     <div class="col col-3 ">
-                      <select class="number bg-dark text-white" id="language-select">
-                        <option><img src="Flags.png" alt="no img" width: 22.px; height: 16px;>+91</option>
+                      <select class="number bg-dark text-white opacity-25" id="language-select">
+                        <option><img src="Flags.png" alt="no img" width: 22px; height: 16px;>+91</option>
                         <option>+1</option>
                         <option>+100</option>
                         <option>+38</option>
@@ -134,7 +134,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-6 p-0 right-panel" style="padding: 0px !important;margin: 0px !important;height: 100vh;">
+      <div class="col  col-6  p-0 right-panel " style="padding: 0px !important;margin: 0px !important;height: 100vh;">
         <img src="signin.png" id="image" alt="side-image" />
       </div>
     </div>
