--- a/Main-task/signup.html
+++ b/Main-task/signup.html
@@ -92,8 +92,7 @@
         </div>
       </div>
       <div class="col col-6 p-0">
-        <img
-          src="https://s3-alpha-sig.figma.com/img/604e/1b5c/7d3c27a774af4e69a6b43fde874c130d?Expires=1739750400&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ROFbOXQrGEygKeIWT077YAUhtyPJ~HBQFbDf4KAM1tJv6YSeMzJxNxChFBU~49tPVvxNMWruY169MNRJPWBtcHMG1rRxHRJFk5SKccg0-~GHDcW4L959tdJNgXUqYwKRik0JN4h4qcSk6Yqksladu2ns8r4ViJFm2qELOS44bYN-rpE-zN49B6IgYyrvt5rzqeuzwH8Trqoe46vqMsDqCkjfKdP0g7bHdZUKtkOTQnBKHHjyqdTFV3kwnBPAI-PA3EgasW97XuBpeAueFVDd6ghxnrB7n~BU5N-bXQN23dNDxh0EDyokFJc9L3nsiBoMT5gnPcdIE4s3Id-uHkpMOQ__" />
+        <img src="signup.png" />
       </div>
     </div>
   </div>
