--- a/Main-task/index.html
+++ b/Main-task/index.html
@@ -31,7 +31,7 @@
                 <fieldset>
                   <label class="form-label text-white" for="name">Name</label>
                   <input type="text" class="form-control bg-dark" id="name" placeholder="Enter Name" required />
-                  <div class="name-err">water</div>
+                  <div class="name-err"></div>
                 </fieldset>
                 <fieldset class="mt-3">
                   <label class="form-label text-white" for="password">Password</label>
@@ -135,7 +135,7 @@
         </div>
       </div>
       <div class="col  col-6  p-0 right-panel " style="padding: 0px !important;margin: 0px !important;height: 100vh;">
-        <img src="signin.png" id="image" alt="side-image" />
+        <img src="signin.png" id="image" alt="signup.png" />
       </div>
     </div>
   </div>
