--- a/Main-task/index.html
+++ b/Main-task/index.html
@@ -48,7 +48,7 @@
                   <a href="#" class="justify-content-end forget-password">Forget Password?</a>
                 </fieldset>
                 <p id="signInError" class="text-danger mt-5"></p>
-                <button type="button" class="btn col-12  mb-3 sign" onclick="signIn()" >Submit</button>
+                <button type="button" class="btn col-12 mb-3 sign" onclick="signIn()" >Submit</button>
                 <div class="or text-white">OR</div>
                 <div class="btn btn-white bg-white col-12 mt-3 sign d-flex justify-content-center"
                   style="align-items: center;">Sign up with Google <img src="ic_google.png" alt="">
@@ -135,7 +135,8 @@
         </div>
       </div>
       <div class="col  col-6  p-0 right-panel " style="padding: 0px !important;margin: 0px !important;height: 100vh;">
-        <img src="signin.png" id="image" alt="signup.png" />
+        <!-- <img src="" id="image" alt="" /> -->
+         <img src="./signin.png"  alt="">
       </div>
     </div>
   </div>
